# webnerf

./: Cargo.toml  Dockerfile
src/: main.rs
static/receive/: index.html
static/send/: index.html
